<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.kolkathadetails"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Victoria Memorial"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/VictoriaMemorial"
                    android:textColor="@android:color/black" />
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkvictoria"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fort William"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/FortWilliam"
                    android:padding="10dp"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkfort"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eden Gardens"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/EdenGardens"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkeden"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Indian Museum"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/IndianMuseum"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkmuseum"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tajpur"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/Tajpur"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolktajpur"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nakhoda Mosque"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/NakhodaMosque"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkmosque"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alipore Zoo"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/AliporeZoo"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkzoo"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kalighat Temple"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/KalighatTemple"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kolkfort"
                    android:padding="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>