<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.delhidetails"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="The Red Fort"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/TheRedFort"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhredfort"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humayun's Tomb"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/HumayunTomb"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhtomb"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Qutab Minar"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/QutabMinar"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhminar"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lotus Temple"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/LotusTemple"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhlotus"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="India Gate"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/IndiaGate"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhgate"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rashtrapati Bhawan"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/RashtrapatiBhawan"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhbhavan"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gurudwara Bangla Sahib"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/GurudwaraBanglaSahib"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhguru"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Akshardham"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/Akshardham"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:padding="3dp"
                    android:src="@drawable/delhiaksh"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>